--- a/src/views/home.css
+++ b/src/views/home.css
@@ -47,10 +47,42 @@
     flex-direction: column;
     margin: 20px auto;
   }
+
+  h3, .h3 {
+    font-size: 1.8rem !important;
+  }
+
+  .display-3 {
+    font-size: 2rem !important;
+    margin-bottom: 1.2rem;
+  }
 }
 
 @media(max-width: 580px) {
   * {
     text-align: center;
+  }
+
+  .p-dialog .p-dialog-titlebar-icons {
+    display: none;
+  }
+
+  .btn-dialog{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .btn-dialog:last-child{
+    margin-top: 5px !important;
+  }
+
+}
+
+@media (max-width: 300px) {
+  body .p-dialog .p-dialog-footer button {
+    margin: 5px auto;
+    width: 100%;
   }
 }
